2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 553857 – gbacktrace.h requires signal.h

	* glib/gbacktrace.h: Include signal.h for raise(). 
	Pointed out by Sebastien Bacher

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 553724 – python interpretter path not patched in correctly

	* glib/Makefile.am: Fix the sed magic to replace python.

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmain.c: Add some more docs.

	* glib/giochannel.c: Move more docs inline, and improve them
	on the way.

2008-09-25  Tor Lillqvist  <tml@novell.com>

	Bug 553820 - gpoll.c: undeclared identifier

	* glib/gmain.c
	* glib/gpoll.c: Make the g_poll() function non-static also on
	Windows. Prefix an underscore to the g_main_poll_debug variable
	and make it non-static in gmain.c so that it can be used in
	gpoll.c. Add back missing variable declaration.

2008-09-25  Tor Lillqvist  <tml@novell.com>

	* glib/gspawn-win32.c (do_spawn_with_pipes) (do_spawn_directly):
	Just ignore the child_setup function, never call it. The is no
	situation in which it could be useful on Windows. Do print a
	warning, like before.

	* glib/gspawn.c (g_spawn_async_with_pipes): Corresponding change
	in documentation.

2008-09-24  Sven Herzberg  <sven@imendio.com>

	Be a little more explcit in the docs. Includes Owen's requested
	changes.

	* glib/gmain.c: improved documentation for g_source_attach() and
	g_source_destroy()

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* glib/glib.h: #include <glib/gpoll.h>

	* glib/gpoll.h: #error out if gpoll.h is included directly.

	* glib/gpoll.c: remove trailing whitespace.

2008-09-23  Dan Winship  <danw@gnome.org>

	* glib/gpoll.[ch] (g_poll): Move this out of gmain.c and make it part
	of the public API. (Part of Bug 505361 - gunixinputstream.c assumes
	poll() available.)

2008-09-23  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.c (poll_rest) [Win32]: Fix embarrassing bug: I was