@@ -1,3 +1,4 @@
+#include "config.h"
 #include "pcre_internal.h"
 
 /*
