@@ -1,3 +1,14 @@
+2008-09-26  Dan Winship  <danw@gnome.org>
+
+	* glib/gthreadpool.c (wakeup_thread_marker): make this a "const
+	gpointer" rather than a gconstpointer to avoid warnings later
+
+	* glib/pcre/pcre_ucp_searchfuncs.c:
+	* glib/pcre/pcre_valid_utf8.c: #include "config.h"
+
+	* glib/tests/printf.c (test_d): fool gcc into not warning about
+	some printf format strings that we know are dubious
+
 2008-09-26  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 553857 – gbacktrace.h requires signal.h
